[package]
name = "scun"
version = "0.3.3"
authors = ["Tim Biermann <tbier@posteo.de>"]
edition = "2021"

[dependencies]
once_cell = "1.21.3"
libnotify = "1.0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
xdg = "3.0.0"
bincode = "2.0.1"
libversion = { git = "https://github.com/repology/libversion-rs", tag = "0.2.0" }

[profile.release]
lto = "fat"
incremental = false
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
