[package]
name = "scun"
version = "0.4.0"
authors = ["Tim Biermann <tbier@posteo.de>"]
edition = "2021"

[dependencies]
libnotify = "1.0.3"
libversion = { git = "https://github.com/repology/libversion-rs", tag = "0.3.2" }
rayon = { version = "1.11.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
xdg = "3.0.0"

[profile.release]
lto = "fat"
incremental = false
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
